--- a/Preprocessing/download_modes.ipynb
+++ b/Preprocessing/download_modes.ipynb
@@ -14,7 +14,7 @@
     "\n",
     "login()  # login with your User Access Token, found at https://huggingface.co/settings/tokens\n",
     "\n",
-    "local_dir = \"./mahmood/weights\"\n",
+    "local_dir = \"./mahmood/weights\" #directory to download model weights \n",
     "os.makedirs(local_dir, exist_ok=True)  # create directory if it does not exist\n",
     "hf_hub_download(\"MahmoodLab/UNI\", filename=\"pytorch_model.bin\", local_dir=local_dir, force_download=True)"
    ]
@@ -33,7 +33,7 @@
     "\n",
     "login()  # login with your User Access Token, found at https://huggingface.co/settings/tokens\n",
     "\n",
-    "local_dir = \"./microsoft/weights\"\n",
+    "local_dir = \"./microsoft/weights\" #directory to download model weights \n",
     "os.makedirs(local_dir, exist_ok=True)  # create directory if it does not exist\n",
     "hf_hub_download(\"prov-gigapath/prov-gigapath\", filename=\"pytorch_model.bin\", local_dir=local_dir, force_download=True)"
    ]
@@ -46,14 +46,14 @@
    "source": [
     "from transformers import ViTForImageClassification, TrainingArguments, Trainer\n",
     "\n",
-    "model_name = \"google/vit-base-patch16-224-in21k\"\n",
+    "model_name = \"google/vit-base-patch16-224-in21k\" #name of model to download \n",
     "\n",
     "n_classes = 13 #number of classes\n",
     "\n",
-    "# Load the ViT model pre-trained on ImageNet-21k\n",
+    "# Load the ViT model\n",
     "model = ViTForImageClassification.from_pretrained(model_name, num_labels=n_classes)\n",
     "\n",
-    "save_directory = \"./vit-13\"\n",
+    "save_directory = \"./vit-13\"  #directory to download model weights \n",
     "\n",
     "model.save_pretrained(save_directory)"
    ]
